# fastbank-backend

./: .env.example  .gitignore  Dockerfile  README.md  client.py  db.sqlite3  docker-compose.yml  insomnia.json  populating.py  post.json  pyproject.toml  requirements.txt
core/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_rename_transaction_cardtransaction_and_more.py  0004_alter_naturalperson_rg.py
core/utils/: filters.py  validators.py
project/: settings.py  urls.py
scripts/: commands.sh
users/: admin.py  forms.py  models.py  urls.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py
users/utils/: image_processing.py  validators.py
