[tool.poetry]
name = "fastbank-backend"
version = "0.1.0"
description = ""
authors = ["LuisHBeck <beck.henrique.luis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
