[tool.poetry]
name = "fastbank-backend"
version = "0.1.0"
description = ""
authors = ["LuisHBeck <beck.henrique.luis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"
django-jazzmin = "^2.6.0"
djoser = "^2.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
